# CosmoMap

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  gpu.yaml  synthetic.yaml
cosmomap/: __init__.py  config.py  evaluate.py  inference.py  losses.py  metrics.py  train.py  uncertainty.py  validation.py
cosmomap/models/: __init__.py  blocks.py  film.py  unet3d.py
cosmomap/xray/: __init__.py  emissivity.py  lightcone.py
docs/: METHOD.md
scripts/: download_camels.md  make_figures.py  make_lightcone.py
tests/: conftest.py  test_config.py  test_data.py  test_inference.py  test_losses_metrics.py  test_model.py  test_train_smoke.py  test_validation.py  test_xray.py
